feat: list and delete queue endpoint
